# SoftwareTextil

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/Diagramas_uml/: admin_st_IS_carlota.mdj  arquitectura_capas.mdj  contador_facturacion(angelo).mdj  ecommerce-catalogo_lizzy.mdj  encargado_Inventario_Alejandro.mdj
assets/starUML_codigo/Encargado_Inventario_Ale/: ≪Service≫ConsultaStockService.py
assets/starUML_codigo/SistemaWebTextil_lizzy_Carlos/: Enumeration1.py  carritoRepositorio.py  class3.py  servicioCarrito.py
assets/starUML_codigo/sistemaContableTextil_Angelo/: autenticacióN.py  cierreYAuditoria.py  class4.py  comprobanteElectronico.py  comprobanteFactory.py  credencial.py  datosAuditoria.py  dinero.py  egresoRepo.py  egresoTextil.py  facturacióN-SUNAT.py  gestionDeIngresos.py  gestióNDeEgresos.py  impuestosYDeclaraciones.py  ingreso.py  ingresoRepo.py  inventario.py  libroRegistro.py  mermaDefecto.py  periodo.py  periodoContable.py  productoTextil.py  proveedor.py  servicioCierre.py  servicioDeclaracion.py  servicioSunat.py  sistemaContableTextil.py  stock.py  usuario.py  usuarioRepo.py
docs/: arquitectura.md  modelo_dominio.md  prototipo.md
src/software_textil/: __init__.py  bootstrap.py
src/software_textil/application/: errors.py  ports.py  unit_of_work.py
src/software_textil/infrastructure/: security.py  unit_of_work.py
tests/: test_autenticacion.py  test_checkout_http.py  test_compras_pedidos_pagos.py  test_http_validation.py  test_inventario.py  test_sqlalchemy_checkout_persistence.py
(+137 files in other folders)
